// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountFields/> should match its snapshot 1`] = `
<div>
  <div
    class="sc-htoDjs hAEOmi"
  >
    <div
      class="sc-gzVnrw bHqtcW"
    >
      <button
        class="sc-htpNat fpAZyb"
        data-testid="max-btn"
        tabindex="-1"
        type="button"
      >
        MAX
      </button>
      <div>
        <label
          class="sc-bxivhb htFESG"
          for="ethAmount"
        >
          Amount (ETH)
        </label>
        <input
          class="sc-ifAKCX kSbDeA"
          data-testid="ethAmount-field"
          id="ethAmount"
          placeholder="0.00"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="sc-iwsKbI fGVAip"
    >
      <svg
        class="sc-bZQynM hKkckV"
        viewBox="0 0 24 24"
      >
        <path
          d="M24 7.136v.96H1.642l4.464 4.464-.682.682-5.28-5.28a.475.475 0 0 1 0-.682L5.424 2l.682.682-4.464 4.464H24v-.01zM18.576 11.6l-.682.682 4.464 4.464H0v.96h22.358l-4.464 4.464.682.681 5.28-5.28a.475.475 0 0 0 0-.681l-5.28-5.29z"
        />
      </svg>
    </div>
    <div
      class="sc-gzVnrw bHqtcW"
    >
      <div>
        <label
          class="sc-bxivhb htFESG"
          for="usdAmount"
        >
          Amount (USD)
        </label>
        <input
          class="sc-ifAKCX kSbDeA"
          data-testid="usdAmount-field"
          id="usdAmount"
          placeholder="0.00"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<GasEditor/> should match its snapshot 1`] = `
<div>
  <div
    class="sc-htoDjs hAEOmi"
  >
    <div
      class="sc-gzVnrw bHqtcW"
    >
      <div>
        <label
          class="sc-bxivhb htFESG"
          for="gasLimit"
        >
          Gas Limit (Units)
        </label>
        <input
          class="sc-ifAKCX kSbDeA"
          data-testid="gas-limit-field"
          id="gasLimit"
          type="text"
          value="21000"
        />
      </div>
    </div>
    <div
      class="sc-iwsKbI iyocmw"
    />
    <div
      class="sc-gzVnrw bHqtcW"
    >
      <div>
        <label
          class="sc-bxivhb htFESG"
          for="gasPrice"
        >
          Gas Price (Gwei)
        </label>
        <input
          class="sc-ifAKCX kSbDeA"
          data-testid="gas-price-field"
          id="gasPrice"
          type="text"
          value="1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SendETHForm/> should match its snapshot 1`] = `
<div>
  <div
    class="sc-dnqmqq leBCKL"
  >
    <div />
    <div
      class="sc-iwsKbI DqpKT"
    >
      <form
        data-testid="sendEth-form"
        id="sendForm"
        novalidate=""
      >
        <div>
          <label
            class="sc-bxivhb htFESG"
            for="toAddress"
          >
            Send to Address
          </label>
          <input
            class="sc-ifAKCX kSbDeA"
            data-testid="toAddress-field"
            id="toAddress"
            placeholder="e.g. 0x2345678998765434567"
            type="text"
            value=""
          />
        </div>
        <div
          class="sc-iwsKbI cDKkhl"
        >
          <div
            class="sc-htoDjs hAEOmi"
          >
            <div
              class="sc-gzVnrw bHqtcW"
            >
              <button
                class="sc-htpNat fpAZyb"
                data-testid="max-btn"
                tabindex="-1"
                type="button"
              >
                MAX
              </button>
              <div>
                <label
                  class="sc-bxivhb htFESG"
                  for="ethAmount"
                >
                  Amount (ETH)
                </label>
                <input
                  class="sc-ifAKCX kSbDeA"
                  data-testid="ethAmount-field"
                  id="ethAmount"
                  placeholder="0.00"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="sc-iwsKbI fGVAip"
            >
              <svg
                class="sc-bZQynM hKkckV"
                viewBox="0 0 24 24"
              >
                <path
                  d="M24 7.136v.96H1.642l4.464 4.464-.682.682-5.28-5.28a.475.475 0 0 1 0-.682L5.424 2l.682.682-4.464 4.464H24v-.01zM18.576 11.6l-.682.682 4.464 4.464H0v.96h22.358l-4.464 4.464.682.681 5.28-5.28a.475.475 0 0 0 0-.681l-5.28-5.29z"
                />
              </svg>
            </div>
            <div
              class="sc-gzVnrw bHqtcW"
            >
              <div>
                <label
                  class="sc-bxivhb htFESG"
                  for="usdAmount"
                >
                  Amount (USD)
                </label>
                <input
                  class="sc-ifAKCX kSbDeA"
                  data-testid="usdAmount-field"
                  id="usdAmount"
                  placeholder="0.00"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-iwsKbI cDKkhl"
        >
          <div
            class="sc-htoDjs hdOWyq"
          >
            <div
              class="sc-htoDjs csGvda"
            >
              <span
                class="sc-gZMcBi jHgzeu"
              >
                Gas Limit: 
                21000
                 (Units)
              </span>
              <span
                class="sc-gZMcBi jHgzeu"
              >
                Gas Price: 
                1
                 (Gwei)
              </span>
            </div>
            <button
              class="sc-htpNat bqwpzm"
              data-testid="edit-gas-btn"
              tabindex="-1"
              type="button"
            >
              EDIT GAS
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class="sc-csuQGl gUwZNY"
    >
      <button
        class="sc-bwzfXH gAMukr"
        form="sendForm"
        type="submit"
      >
        Review Send
      </button>
    </div>
  </div>
</div>
`;
